# gpu-compute-comparison

./: .gitignore  README.md
clion-example/: CMakeLists.txt  main.cu
cuda-hello/: CMakeLists.txt
cuda-hello/src/: hello.cu
cuda-kernel/: CMakeLists.txt  main  main.cu
cuda-kernel/kernels/: common.h  config.h  matmul.cuh  ported.cuh  ported_matmul.cuh
cuda-visual-studio/: cuda-visual-studio.sln  cuda-visual-studio.vcxproj  kernel.cu
metal/: Cargo.toml
metal-compute/: Cargo.toml
metal-compute-shader/: .gitignore  Cargo.toml  build.rs
metal-compute-shader/shaders/: matmul.metal
metal-compute-shader/src/: main.rs
vulkan/: Cargo.toml  matrix_multiply.glsl
vulkan-compute/: Cargo.toml
vulkan-compute-shader/: Cargo.toml
vulkan-compute-shader/shaders/bandwidth/: block_1d_to_global.comp  block_2d_to_global.comp  block_tile_to_global_1d.comp  block_to_global_1d.comp  block_to_global_2d.comp  tile_to_block_to_global_1d.comp  tile_to_global_1d.comp  tile_to_global_2d.comp  vec4_to_global.comp
vulkan-compute-shader/shaders/matmul/: block_tiling_1d.comp  block_tiling_2d.comp  cache_blocking.comp  double_buffer.comp  naive.comp  padding.comp  tiled.comp  tiling.comp  vectorize_block_tiling_2d.comp  warp_tiling.comp  wavefront_tiling.comp  write_tile_1d.comp  write_tile_2d.comp
vulkan-compute-shader/src/: common.rs  main.rs
vulkan-compute-shader/src/kernels/: bandwidth.rs  matmul.rs  mod.rs
vulkan-compute-shader/src/kernels/matmul/: mod.rs
vulkan/src/: main.rs
webgpu/: Cargo.toml
webgpu-compute/: Cargo.toml
webgpu-compute-shader/: Cargo.toml
(+17 files in other folders)
