[package]
name = "vulkan-compute-shader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
vulkano = "0.33"
vulkano-shaders = { version = "0.33.0" }
ndarray = { version = "0.15", features = ["blas"] }
ndarray-rand = "0.14"
openblas-src = { version = "0.10", features = ["cblas", "system"] }
